# parking-automation

./: Dockerfile  docker-compose.yml  main.py  parking.db  pyproject.toml
src/: config.py  parking.db
src/api/: auth.py  parking.py  payment.py  plan.py  token.py  user.py
src/core/: auth.py  dependecies.py
src/db/: __init__.py  auth.py  crud.py  parking.py  plan.py  ticket.py  user.py
src/schema/: common.py  token.py
src/schemas/: auth.py  common.py  parking.py  plan.py  user.py
src/services/: sms.py
src/templates/: ticket.html
src/utils/: email.py  otp.py  pagination.py  qr_code.py  scheduler.py
