[tool.poetry]
name = "parking-automation"
version = "0.1.0"
description = ""
authors = ["sepehr-masihpour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = {extras = ["email"], version = "^2.10.2"}
python-dotenv = "^1.0.1"
DateTime = "^5.5"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
redis = "^5.1.1"
pyjwt = "^1.3.1"
pyotp = "^2.9.0"
pymongo = "4.9.0"
motor = "^3.6.0"
kavenegar = "^1.1.2"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.17"
cryptography = "^44.0.0"
jinja2 = "^3.1.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
